# gruppe-8-prog2052-kode-kamp

./: .gitlab-ci.yml  Dockerfile  README.md  compose.yaml  justfile  package-lock.json
backend/: .dockerignore  .env  .env.template  .gitignore  .gitlab-ci.yml  .secrets.template  README.md  compose.yml  package-lock.json  package.json  tsconfig.json
backend/.bruno/: bruno.json  ping.bru
backend/.bruno/auth/: login.bru  registerGuest.bru
backend/.bruno/environments/: Localhost.bru
backend/.bruno/user/: isVerified.bru
backend/challenges/: 99problems.toml  abc.toml  addtwonumbers.toml  autori.toml  backspace.toml  cold.toml  echoechoecho.toml  findingana.toml  fizzbuzz.toml  joinstrings.toml  kikiboba.toml  nodup.toml  oddities.toml  sorttwonumbers.toml  statistics.toml  twosum.toml  umferd.toml
backend/src/: const.ts  env.ts  index.ts  trpc.ts  user.ts
backend/src/consumers/: coderunner.ts
code-runner/: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  fly.toml
code-runner/src/: lib.rs  main.rs  runner.rs  runtime.js
code-runner/src/endpoints/: execute.rs
code-runner/tests/: run_code.rs  run_tests.rs
frontend/: .gitignore  .gitlab-ci.yml  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.js
frontend/src/: App.css  App.tsx  auth.tsx  const.ts  index.css  main.tsx  ranking.tsx  socket.ts  trpc.ts  types.ts  user.ts  user.tsx  vite-env.d.ts
scraper/: README.md  devenv.nix  kattis_scraper.py  main.py  problem_list
shared/: const.ts  functions.ts  types.ts
(+76 files in other folders)
