[package]
name = "code-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
deno_core = "0.311"
futures-lite = "2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5.0.0-beta.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.1-beta.0", features = ["axum"] }

[build-dependencies]
deno_core = "0.311"
